add_library(imGUI STATIC
        imgui/imgui.cpp imgui/imgui.h
        imgui/examples/imgui_impl_opengl3.cpp imgui/examples/imgui_impl_opengl3.h
        imgui/examples/imgui_impl_sdl.cpp imgui/examples/imgui_impl_sdl.h
        imgui/imconfig.h imgui/imgui_demo.cpp
        imgui/imgui_draw.cpp imgui/imgui_internal.h
        imgui/imgui_widgets.cpp imgui/imstb_rectpack.h
        imgui/imstb_textedit.h imgui/imstb_truetype.h
)