add_library(Sources STATIC
    Core/Shader/Shader.h Core/Shader/Shader.cpp
    
    Core/VertexBuffer/VertexBuffer.h Core/VertexBuffer/VertexBuffer.cpp
    Core/VertexBuffer/VertexLayout.h Core/VertexBuffer/VertexLayout.cpp

    Core/VertexArray/VertexArray.h Core/VertexArray/VertexArray.cpp
    
    Core/IndexBuffer/IndexBuffer.h Core/IndexBuffer/IndexBuffer.cpp

    Helper/parser.h Helper/parser.cpp
    Core/Renderer.h Core/Renderer.cpp
)