add_library(Sources STATIC
        Core/Renderer/Shader/Shader.h Core/Renderer/Shader/Shader.cpp
        Core/Renderer/VertexBuffer/VertexBuffer.h Core/Renderer/VertexBuffer/VertexBuffer.cpp
        Core/Renderer/VertexBuffer/VertexLayout.h Core/Renderer/VertexBuffer/VertexLayout.cpp
        Core/Renderer/VertexArray/VertexArray.h Core/Renderer/VertexArray/VertexArray.cpp
        Core/Renderer/IndexBuffer/IndexBuffer.h Core/Renderer/IndexBuffer/IndexBuffer.cpp
        Core/Renderer/Renderer.h Core/Renderer/Renderer.cpp
        Helper/parser.h Helper/parser.cpp)