add_library(oglite STATIC 

oglite.h

Helper/parser.h Helper/parser.cpp

Core/Renderer/Renderer.cpp Core/Renderer/Renderer.h
Core/Renderer/Shader/Shader.h Core/Renderer/Shader/Shader.cpp
Core/Renderer/VertexBuffer/VertexBuffer.h Core/Renderer/VertexBuffer/VertexBuffer.cpp
Core/Renderer/VertexBuffer/VertexLayout.h Core/Renderer/VertexBuffer/VertexLayout.cpp
Core/Renderer/VertexArray/VertexArray.h Core/Renderer/VertexArray/VertexArray.cpp
Core/Renderer/IndexBuffer/IndexBuffer.h Core/Renderer/IndexBuffer/IndexBuffer.cpp
Core/Renderer/Texture/Texture.cpp Core/Renderer/Texture/Texture.h
Core/Renderer/Model/Mesh/Vertex/Vertex.h 
Core/Renderer/Model/Mesh/Mesh.cpp Core/Renderer/Model/Mesh/Mesh.h
Core/Renderer/Model/Model.cpp 
Core/Renderer/Model/Model.h
)