add_library(SandboxExamples STATIC
        TriangleSandbox/TriangleSandbox.h TriangleSandbox/TriangleSandbox.cpp
        CameraSandbox/CameraSandbox.cpp CameraSandbox/CameraSandbox.h
        LightningSandbox/LightningSandbox.cpp LightningSandbox/LightningSandbox.h MeshSandbox/MeshSandbox.cpp MeshSandbox/MeshSandbox.h)